[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "spacy-ann-linker-v3"
module = "spacy_ann"
author = "Spenser Stone"
author-email = "YongSuTK@gmail.com"
home-page = "https://github.com/PearlOnyx08/test_linker/"

[tool.flit.scripts]
spacy_ann = "spacy_ann.cli:main"

[tool.flit.entrypoints."spacy_factories"]
ann_linker = "spacy_ann.ann_linker:AnnLinker"

[tool.flit.entrypoints."spacy_kb"]
get_candidates = "spacy_ann:get_candidates"
